Rename to postgresql2 for customization

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,10 @@
-name: postgresql
+name: postgresql2
 version: 0.3.2
 author: Greg Lowe <greg@vis.net.nz>
-description: Postgresql database driver.
-homepage: https://github.com/xxgreg/dart_postgresql
+description: >
+  A temporary fork of Greg's PostgreSQL driver (xxgreg/postgresql)
+  using conserved substitution respecting strings and @@ operators.
+homepage: https://github.com/tomyeh/postgresql
 environment:
   sdk: ">=0.8.10+6 <2.0.0"
 dependencies:
