--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: postgresql2
-version: 0.3.3+3
+version: 0.3.3+4
 authors:
 - Greg Lowe <greg@vis.net.nz>
 - Tom Yeh <tomyeh@rikulo.org>
@@ -9,9 +9,9 @@ description: >
   also optimizing the pool implementation aggressivly.
 homepage: https://github.com/tomyeh/postgresql
 environment:
-  sdk: ">=0.8.10+6 <2.0.0"
+  sdk: ">=1.0.0 <2.0.0"
 dependencies:
-  crypto: ">=0.9.0 <3.0.0"
+  crypto: ">=2.0.0 <3.0.0"
 dev_dependencies:
   test: ">=0.12.0 <1.0.0"
   yaml: ">=0.9.0 <3.0.0"
