--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ homepage: https://github.com/tomyeh/postgresql
 environment:
   sdk: ">=2.0.0 <3.0.0"
 dependencies:
-  crypto: ">=2.0.0 <3.0.0"
-  convert: ">=1.0.0 <3.0.0"
+  crypto: ">=2.0.0"
+  convert: ">=1.0.0"
 dev_dependencies:
   test: any
-  yaml: ">=0.9.0 <3.0.0"
+  yaml: any
