--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,12 +8,7 @@ description: >
   A temporary fork of Greg's PostgreSQL driver (xxgreg/postgresql)
   using conserved substitution respecting strings and @@ operators.
   also optimizing the pool implementation aggressively.
-  With added support for encoding parametrized lists. E.g.
-  List<int> ids = [ ... ]; // init list with values or get it from parameters
-  result1 = db.query("select * from table where id in (@ids)", { "ids": ids });
-  result2 = db.query("select * from table where id = any (array[@ids]::int[])", { "ids": ids });
-  When using array[@x] syntax in query it's wise to use array type cast (::int[], ::date[], ...)
-  to avoid problems with null list.
+  With added support for encoding parametrized lists. See README.md
 homepage: https://github.com/tomyeh/postgresql
 
 environment:
