--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: postgresql2
-version: 0.5.8+1
+version: 0.6.0
 description: >
   A temporary fork of Greg's PostgreSQL driver (xxgreg/postgresql)
   using conserved substitution respecting strings and @@ operators.
@@ -12,6 +12,7 @@ environment:
 dependencies:
   crypto: ">=2.0.0"
   convert: ">=1.0.0"
+  charcode: ">=1.0.0"
 
 dev_dependencies:
   test: any
